--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "prepare": "husky install",
+    "commit": "commit"
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -18,6 +20,9 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.16.0",
+    "@commitlint/cli": "^17.6.3",
+    "@commitlint/config-conventional": "^17.6.3",
+    "@commitlint/prompt-cli": "^17.6.3",
     "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
@@ -35,6 +40,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^8.3.0",
     "fibers": "^5.0.0",
+    "husky": "^8.0.3",
     "jest-transform-stub": "^2.0.0",
     "node-sass": "^6.0.1",
     "sass-loader": "^10",
