--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "commit": "commit"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.13",
+    "@heroicons/vue": "^1.0.6",
     "axios": "^1.3.4",
     "core-js": "^3.6.5",
+    "postcss-cli": "^10.1.0",
     "vue": "^3.2.29",
     "vue-router": "^4.0.12"
   },
@@ -35,6 +38,7 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
     "@vue/test-utils": "^2.0.0-0",
+    "autoprefixer": "^9.8.8",
     "babel-eslint": "^10.1.0",
     "babel-plugin-component": "^1.1.1",
     "eslint": "^6.7.2",
@@ -43,7 +47,9 @@
     "husky": "^8.0.3",
     "jest-transform-stub": "^2.0.0",
     "node-sass": "^6.0.1",
+    "postcss": "^7.0.39",
     "sass-loader": "^10",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "typescript": "^4.5.3",
     "vue-cli-plugin-mock": "^1.0.3",
     "vue-jest": "^5.0.0-0"
