--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "core-js": "^3.6.5",
     "postcss-cli": "^10.1.0",
     "vue": "^3.2.29",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vue3-echarts": "^1.1.0"
   },
   "resolutions": {
     "acorn": "npm:acorn-with-stage3"
